gccida/g3/integrate_decl_tree
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/integrate_decl_tree/src/integrate.c:2268:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/integrate_decl_tree/src/integrate.c:2269:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/integrate_decl_tree/src/integrate.c:2275:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *fndecl; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/integrate_decl_tree/src/integrate.c:2279:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *j; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/integrate_decl_tree/src/integrate.c:2322:22: error: expected expression
v10 = *( tree_node **)( i + 112); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/integrate_decl_tree/src/integrate.c:2322:10: error: use of undeclared identifier 'tree_node'
v10 = *( tree_node **)( i + 112); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/integrate_decl_tree/src/integrate.c:2325:20: error: expected expression
v10 = ( tree_node *)i; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/integrate_decl_tree/src/integrate.c:2325:9: error: use of undeclared identifier 'tree_node'
v10 = ( tree_node *)i; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/integrate_decl_tree/src/integrate.c:2328:22: error: expected expression
v11 = *( tree_node **)( i + 80); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/integrate_decl_tree/src/integrate.c:2328:10: error: use of undeclared identifier 'tree_node'
v11 = *( tree_node **)( i + 80); 
         ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/integrate_decl_tree/src/obj/integrate.o] Error 1
